Changelog
=========

9.1.dev0 - (unreleased)
-----------------------

9.0 - (2016-08-29)
------------------
* Feature: Added possibility to automatically publish/retract object's related items
  and/or backward references via Content-Rules
  [catalin refs #70758]

8.3 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [ichim-david refs #71940]

8.2 - (2016-01-04)
------------------
* Bugfix: removed debugging statements from eea_relateditems.pt
  [ichim-david]

8.1 - (2015-12-07)
------------------
* Change: Added system depenedencies within setup.py
  [voineali refs #27406]

8.0 - (2015-11-09)
------------------
* Fix: Updated objects where new version was created and the eea_refs contains
  objects instead of uids
  [szabozo0 refs #30502]

7.9 - (2015-11-06)
------------------
* Fix: Force uids only for eea_refs
  [szabozo0 refs #30398]

7.8 - (2015-11-05)
------------------
* Bugfix: EEAReferenceField needs a list of uids, so if we receive a list
  of objects, we get their uids
  [szabozo0 refs #30398]

7.7 - (2015-11-03)
------------------
* Bugfix: EEAReferenceField needs a list with related objects when setting
  references and not the object itself in case there is only one reference
  [ichim-david refs #30288]
* Bugfix: Customized set and getRaw methods for EEAReferenceField so we can
  have a diff for relations also
  [szabozo0 refs #21177]

7.6 - (2015-09-10)
------------------
* Change: documented the required js for eeareferencebrowser.js
  [ichimdav refs #27220]

7.5 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]
* Change: removed green gradient from popup-selected-items, we now use
  flat colors
  [ichimdav refs #27537]

7.4 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]