@@ -1,6 +1,7 @@
 """ Async jobs
 """
 import logging
+import urlparse
 from zope import event
 from plone import api
 from zope.component import queryAdapter
@@ -10,7 +11,7 @@ from eea.relations.rules.interfaces import IContextWrapper
 logger = logging.getLogger('eea.relations')
 
 
-def forward_transition_change(obj, transition):
+def forward_transition_change(obj, transition, portal_url=''):
     """ Forward workflow state changed related items
     """
     relatedItems = obj.getRelatedItems()
@@ -20,28 +21,36 @@ def forward_transition_change(obj, transition):
     succeeded = set()
     failed = set()
     for item in relatedItems:
+        url = item.absolute_url()
+        if not url.startswith('http'):
+            url = urlparse.urljoin(portal_url, url)
         try:
             api.content.transition(obj=item, transition=transition)
         except Exception, err:
             logger.debug("%s: %s", item.absolute_url(), err)
-            failed.add(item.absolute_url())
+            failed.add(url)
         else:
-            succeeded.add(item.absolute_url())
+            succeeded.add(url)
 
     if not (succeeded or failed):
         return
 
     wrapper = queryAdapter(obj, IContextWrapper)
     if wrapper is not None:
+        url = obj.absolute_url()
+        if not url.startswith('http'):
+            url = urlparse.urljoin(portal_url, url)
         obj = wrapper(
             related_items_changed=succeeded,
             related_items_unchanged=failed,
-            related_items_transition=transition)
+            related_items_transition=transition,
+            related_items_url=url
+        )
 
     event.notify(ForwardRelatedItemsWorkflowStateChanged(obj))
 
 
-def backward_transition_change(obj, transition):
+def backward_transition_change(obj, transition, portal_url=None):
     """ Backward workflow state changed related items
     """
     backRefs = obj.getBRefs()
@@ -51,22 +60,30 @@ def backward_transition_change(obj, transition):
     succeeded = set()
     failed = set()
     for item in backRefs:
+        url = item.absolute_url()
+        if not url.startswith('http'):
+            url = urlparse.urljoin(portal_url, url)
         try:
             api.content.transition(obj=item, transition=transition)
         except Exception, err:
             logger.debug("%s: %s", item.absolute_url(), err)
-            failed.add(item.absolute_url())
+            failed.add(url)
         else:
-            succeeded.add(item.absolute_url())
+            succeeded.add(url)
 
     if not (succeeded or failed):
         return
 
     wrapper = queryAdapter(obj, IContextWrapper)
     if wrapper is not None:
+        url = obj.absolute_url()
+        if not url.startswith('http'):
+            url = urlparse.urljoin(portal_url, url)
         obj = wrapper(
             related_items_changed=succeeded,
             related_items_unchanged=failed,
-            related_items_transition=transition)
+            related_items_transition=transition,
+            related_items_url=url
+        )
 
     event.notify(BackwardRelatedItemsWorkflowStateChanged(obj))
